syntax = "proto3";

package istio.testing.mcp.sinkserver;

import "mcp/v1alpha1/resource.proto";

option go_package="mcpserver";

service McpSinkControllerService {
    rpc GetCollectionState(CollectionStateRequest) returns (CollectionStateResponse);
}

message CollectionStateRequest {
    string collection = 1;
}

message CollectionStateResponse {
    repeated istio.mcp.v1alpha1.Resource sink_object = 1;
}